First tests for GameController